fix(theme): uat-12 header spacing

--- a/web/themes/custom/ellison/components/00-base/tailwind/_tailwind.scss
+++ b/web/themes/custom/ellison/components/00-base/tailwind/_tailwind.scss
@@ -4519,64 +4519,9 @@ form.webform-submission-newsletter-form-form {
     }
   }
   h2 {
-    /* #BUTTON */
-    a {
-      border-radius: 9999px;
-    }
-    a {
-      border-style: none;
-    }
-    a {
-      --tw-bg-opacity: 1;
-      background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-    }
-    a {
-      padding-top: 0.75rem;
-      padding-bottom: 0.75rem;
-    }
-    a {
-      padding-left: 0.75rem;
-      padding-right: 0.75rem;
-    }
-    a {
-      font-size: 1rem;
-      line-height: 1.5rem;
-    }
-    a {
-      text-transform: uppercase;
-    }
-    a {
-      --tw-text-opacity: 1;
-      color: rgb(13 96 180 / var(--tw-text-opacity));
-    }
-    a {
-      text-decoration-line: none;
-    }
-    a:hover {
-      --tw-text-opacity: 1;
-      color: rgb(255 255 255 / var(--tw-text-opacity));
-    }
-    a:hover {
-      opacity: 0.8;
-    }
-    a:focus {
-      outline: 2px solid transparent;
-      outline-offset: 2px;
-    }
-    a:focus {
-      --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-      --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-      box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-    }
-    a:focus {
-      --tw-ring-opacity: 1;
-      --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
-    }
-    @media (min-width: 768px) {
-      a {
-        padding-left: 3rem;
-        padding-right: 3rem;
-      }
+    a.button-white {
+      font-size: 1rem !important;
+      line-height: 1.5rem !important;
     }
   }
   form.webform-submission-newsletter-form-form {
@@ -4602,7 +4547,7 @@ form.webform-submission-newsletter-form-form {
       --tw-text-opacity: 1;
       color: rgb(55 65 81 / var(--tw-text-opacity));
     }
-    /* #BUTTON */
+    /* #BUTTON a.button-white */
     #edit-actions-submit {
       border-radius: 9999px;
     }
@@ -4622,8 +4567,7 @@ form.webform-submission-newsletter-form-form {
       padding-right: 0.75rem;
     }
     #edit-actions-submit {
-      font-size: 1rem;
-      line-height: 1.5rem;
+      font-weight: 700;
     }
     #edit-actions-submit {
       text-transform: uppercase;
@@ -4636,8 +4580,7 @@ form.webform-submission-newsletter-form-form {
       text-decoration-line: none;
     }
     #edit-actions-submit:hover {
-      --tw-text-opacity: 1;
-      color: rgb(255 255 255 / var(--tw-text-opacity));
+      text-decoration-line: none;
     }
     #edit-actions-submit:hover {
       opacity: 0.8;
@@ -4653,7 +4596,7 @@ form.webform-submission-newsletter-form-form {
     }
     #edit-actions-submit:focus {
       --tw-ring-opacity: 1;
-      --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
+      --tw-ring-color: rgb(70 182 227 / var(--tw-ring-opacity));
     }
     @media (min-width: 768px) {
       #edit-actions-submit {
@@ -5814,6 +5757,12 @@ form.webform-submission-newsletter-form-form {
     margin-right: auto;
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+  @media (min-width: 1280px) {
+    &__inner {
+      padding-left: 4rem;
+      padding-right: 4rem;
+    }
   }
   &__branding {
     display: flex;
